# displaylif

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
displaylif.egg-info/: PKG-INFO  SOURCES.txt
displaylif_Zuriahn-Yun/: display.py
displaylif_Zuriahn_Yun.egg-info/: PKG-INFO  SOURCES.txt
