[project]
name = "displaylif"
version = "0.0.2"
authors = [
  { name="Zuriahn Yun", email="yunzuriahn@gmail.com" },
]
description = "A small package to display lif files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Zuriahn-Yun/displaylif"
Issues = "https://github.com/Zuriahn-Yun/displaylif/issues"